Backport relative paths to src/. Add notes for home.js

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="icon"
       type="image/png"
       href="assets/kateArmy.png">
-    <script src="/libs/moment.js"></script>
+    <script src="libs/moment.js"></script>
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
     <!-- CHANGE/REMOVE BEFORE PRODUCTION -->
 </head>
@@ -50,8 +50,6 @@
       <div class="youtube-logo"><img width="100%" src="assets/YouTube-icon-full_color.png"></div>
       <span class="youtube-username"></span>
     </a>
-    <!-- twitcharino -->
-    <!-- youtube -->
     <div class="about-blcok">
       <span class="about-block-element about-left">Centered art by <a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
       <span class="about-block-element about-center">Authored by <a href="https://github.com/XrXr">XrXr</a></span>
