Notify users about the recent change. (production only)
It will be changed back in a day or so

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- youtube -->
     <div class="about-blcok">
       <span class="about-block-element about-left">Centered art by <a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
-      <span class="about-block-element about-center">Authored by <a href="https://github.com/XrXr">XrXr</a></span>
+      <span class="about-block-element about-center"><a href="http://www.reddit.com/r/KateArmy/comments/2b42f3/wheniskatelive_is_now_available/cj2ap1e">Recent problem</a> regarding DST is now <a href="https://github.com/XrXr/WhenIsKateLive/commit/df006320dae07e66e0ce73f59d6c1b5027007b5f">fixed</a></span>
       <span class="about-block-element about-right"><a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
     </div>
   </div>
