Make links open properly
- Since the page is inside a frame when used with a domain, clicking on
  https links would cause errors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="center-region">
     <h3>Kate will be live in:</h3>
-    <h1><a class="disguise prefix" href="#">&nbsp;</a></h1>
+    <h1><a target="_top" class="disguise prefix" href="#">&nbsp;</a></h1>
     <table>
       <thead>
         <tr>
@@ -43,24 +43,24 @@
     </table>
     <p class="notice-center"><strong><small>All times are in PST</small></strong></p>
     <div class="overlay-block"></div>
-    <a href="https://twitter.com/lovelykaitkim" class="twitter-block disguise">
+    <a target="_top" href="https://twitter.com/lovelykaitkim" class="twitter-block disguise">
       <div class="twitter-logo"><img width="100%" src="assets/Twitter_logo_blue.png"></div>
       <span class="twitter-username"></span>
     </a>
-    <a href="http://www.twitch.tv/lovelymomo" class="twitch-block disguise">
+    <a target="_top" href="http://www.twitch.tv/lovelymomo" class="twitch-block disguise">
       <div class="twitch-logo"><img width="100%" src="assets/GlitchIcon_purple.png"></div>
       <span class="twitch-username"></span>
     </a>
-    <a href="https://www.youtube.com/user/ProBoxStudio/videos" class="youtube-block disguise">
+    <a target="_top" href="https://www.youtube.com/user/ProBoxStudio/videos" class="youtube-block disguise">
       <div class="youtube-logo"><img width="100%" src="assets/YouTube-icon-full_color.png"></div>
       <span class="youtube-username"></span>
     </a>
     <!-- twitcharino -->
     <!-- youtube -->
     <div class="about-blcok">
-      <span class="about-block-element about-left">Centered art by <a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
-      <span class="about-block-element about-center"><a href="http://www.reddit.com/r/KateArmy/comments/2b42f3/wheniskatelive_is_now_available/cj2ap1e">Recent problem</a> regarding DST is now <a href="https://github.com/XrXr/WhenIsKateLive/commit/df006320dae07e66e0ce73f59d6c1b5027007b5f">fixed</a></span>
-      <span class="about-block-element about-right"><a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
+      <span class="about-block-element about-left">Centered art by <a target="_top" href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
+      <span class="about-block-element about-center"><a target="_top" href="http://www.reddit.com/r/KateArmy/comments/2b42f3/wheniskatelive_is_now_available/cj2ap1e">Recent problem</a> regarding DST is now <a target="_top" href="https://github.com/XrXr/WhenIsKateLive/commit/df006320dae07e66e0ce73f59d6c1b5027007b5f">fixed</a></span>
+      <span class="about-block-element about-right"><a target="_top" href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
     </div>
   </div>
   <script src="js/home.min.js"></script>
