Schedule entry and display improvements. Update schedule
- Renamed Schedule to TimeSlot
- Make TimeSlot entry more readable, via moment's String + format
  constructor
- Stream's toString is now refactored and can output time in hour plus
  minutes (for instance 5:30)
- Add notice about this week's special schedule

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
     <!-- youtube -->
     <div class="about-blcok">
       <span class="about-block-element about-left">Centered art by <a target="_top" href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
-      <span class="about-block-element about-center"><a target="_top" href="http://www.reddit.com/r/KateArmy/comments/2b42f3/wheniskatelive_is_now_available/cj2ap1e">Recent problem</a> regarding DST is now <a target="_top" href="https://github.com/XrXr/WhenIsKateLive/commit/df006320dae07e66e0ce73f59d6c1b5027007b5f">fixed</a></span>
+      <span class="about-block-element about-center"><a target="_top" href="http://www.reddit.com/r/KateArmy/comments/2b42f3/wheniskatelive_is_now_available/cj2ap1e">Recent problem</a> regarding DST is now <a target="_top" href="https://github.com/XrXr/WhenIsKateLive/commit/df006320dae07e66e0ce73f59d6c1b5027007b5f">fixed</a>
+      <br/>
+      This week's schedule is special
+      </span>
       <span class="about-block-element about-right"><a target="_top" href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
     </div>
   </div>
