Fix timezone conversion, new countdown algorithm and better DST handling
- Let Moment take care of timezone conversion by feeding all information
  into the constructor
- Use moment-timezone for checking if DST is observed by the streamer
- Implement algorithm metioned in #3
- Remove nomalize() and friends, thanks to #3
- Add notice about this fix

Closes #2
Closes #3
Closes #4

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       type="image/png"
       href="assets/kateArmy.png">
     <script src="libs/moment.min.js"></script>
+    <script src="libs/moment-timezone.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -59,7 +60,7 @@
     <!-- youtube -->
     <div class="about-blcok">
       <span class="about-block-element about-left">Centered art by <a target="_top" href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
-      <span class="about-block-element about-center"><a target="_top" href="http://www.reddit.com/r/KateArmy/comments/2b42f3/wheniskatelive_is_now_available/cj2ap1e">Recent problem</a> regarding DST is now <a target="_top" href="https://github.com/XrXr/WhenIsKateLive/commit/df006320dae07e66e0ce73f59d6c1b5027007b5f">fixed</a>
+      <span class="about-block-element about-center"><a target="_top" href="https://twitter.com/ThyTan11/status/492181180440395776">Inaccuracy in certain timzone</a> should be <a target="_top" href="#">fixed</a>
       <br/>
       This week's schedule is special
       </span>
