--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       type="image/png"
       href="assets/kateArmy.png">
     <script src="libs/moment.js"></script>
+    <script src="libs/moment-timezone.min.js"></script>
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
     <!-- CHANGE/REMOVE BEFORE PRODUCTION -->
 </head>
