Use Array for streams instead. More exports and tests
- get_sorted_array is removed. TimeSlot is static anyway.

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     <div class="about-blcok">
       <span class="about-block-element about-left">Centered art by <a target="_top" href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
       <span class="about-block-element about-center">Authored by <a target="_top" href="https://github.com/XrXr">XrXr</a></span>
-      <span class="about-block-element about-right"><a target="_top" href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
+      <span class="about-block-element about-right"><a target="_top" href="test/test.html">Tests</a>&nbsp;&nbsp;<a target="_top" href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
     </div>
   </div>
   <script src="js/home.js"></script>
