--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <br/>
       This week's schedule is special
       </span>
-      <span class="about-block-element about-right"><a target="_top" href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
+      <span class="about-block-element about-right"><a target="_top" href="test/test.html">Tests</a>&nbsp;&nbsp;<a target="_top" href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
     </div>
   </div>
   <script src="js/home.min.js"></script>
