--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
     <!-- youtube -->
     <div class="about-blcok">
       <span class="about-block-element about-left">Centered art by <a target="_top" href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
-      <span class="about-block-element about-center"><a target="_top" href="https://twitter.com/ThyTan11/status/492181180440395776">Inaccuracy in certain timzone</a> should be <a target="_top" href="https://github.com/XrXr/WhenIsKateLive/commit/f6d72e60976d8df18bd64fa763e5f722f124f4ca">fixed</a>
-      <br/>
-      This week's schedule is special
-      </span>
+      <span class="about-block-element about-center">Authored by <a target="_top" href="https://github.com/XrXr">XrXr</a></span>
       <span class="about-block-element about-right"><a target="_top" href="test/test.html">Tests</a>&nbsp;&nbsp;<a target="_top" href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
     </div>
   </div>
