Add <html>, <head>, and <body> back in

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html><head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="initial-scale=1, minimum-scale=1">
@@ -10,7 +11,9 @@
 <script src="libs/moment.js"></script>
 <script src="libs/moment-timezone.min.js"></script>
 
+</head>
 <!--=========================================================================-->
+<body>
 
 <h3>Kate will be live in:</h3>
 <h1><a></a></h1>
@@ -45,11 +48,12 @@
 </nav>
 
 <footer>
-  <span class="about-block-element about-left">Centered art by <a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
-  <span class="about-block-element about-center">Authored by <a href="https://github.com/XrXr">XrXr</a></span>
-  <span class="about-block-element about-right"><a href="test/test.html">Tests</a>&nbsp;&nbsp;<a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
+  <span>Centered art by <a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
+  <span>Authored by <a href="https://github.com/XrXr">XrXr</a></span>
+  <span><a href="test/test.html">Tests</a>&nbsp;&nbsp;<a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
 </footer>
 
 <!--=========================================================================-->
 
 <script src="js/home.js"></script>
+</body>
