--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1, minimum-scale=1">
+    <base target="_top">
 
     <title>When is Kate Live</title>
     <link rel="stylesheet" href="styles/home.css">
