Centered credit footer, narrow-screen break, more indentation repairs

--- a/src/index.html
+++ b/src/index.html
@@ -19,16 +19,16 @@
   <h1><a></a></h1>
   
   <table>
-  <thead><tr>
-    <th>Monday
-    <th>Tuesday
-    <th>Thursday
-    <th>Saturday
-  <tbody><tr>
-    <td>8 to 11 PM
-    <td>1 to 3 PM
-    <td>10 to 12 PM
-    <td>8 to 11 PM
+    <thead><tr>
+      <th>Monday
+      <th>Tuesday
+      <th>Thursday
+      <th>Saturday
+    <tbody><tr>
+      <td>8 to 11 PM
+      <td>1 to 3 PM
+      <td>10 to 12 PM
+      <td>8 to 11 PM
   </table>
   
   <p class="notice"><strong><small>All times are in PST</small></strong></p>
@@ -36,21 +36,21 @@
   <img src="assets/overlay.jpg" class="art" alt="">
   
   <nav>
-  <a href="https://twitter.com/lovelykaitkim" class="twitter site">
-    <img src="assets/Twitter_logo_blue.png" alt="@lovelykaitkim"><span class="name">@LovelyKaitKim</span>
-  </a>
-  <a href="http://www.twitch.tv/lovelymomo" class="twitch site">
-    <img src="assets/GlitchIcon_purple.png" alt="LovelyMomo"><span class="name">LovelyMomo</span>
-  </a>
-  <a href="https://www.youtube.com/user/ProBoxStudio/videos" class="youtube site">
-    <img src="assets/YouTube-icon-full_color.png" alt="ProBoxStudio"><span class="name">ProBoxStudio</span>
-  </a>
+    <a href="https://twitter.com/lovelykaitkim" class="twitter site">
+      <img src="assets/Twitter_logo_blue.png" alt="@lovelykaitkim"><span class="name">@LovelyKaitKim</span>
+    </a>
+    <a href="http://www.twitch.tv/lovelymomo" class="twitch site">
+      <img src="assets/GlitchIcon_purple.png" alt="LovelyMomo"><span class="name">LovelyMomo</span>
+    </a>
+    <a href="https://www.youtube.com/user/ProBoxStudio/videos" class="youtube site">
+      <img src="assets/YouTube-icon-full_color.png" alt="ProBoxStudio"><span class="name">ProBoxStudio</span>
+    </a>
   </nav>
   
   <footer>
-  <span>Centered art by <a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
-  <span>Authored by <a href="https://github.com/XrXr">XrXr</a></span>
-  <span><a href="test/test.html">Tests</a>&nbsp;&nbsp;<a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
+    <span id="artist">Centered art by <a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
+    <span id="author">Authored by <a href="https://github.com/XrXr">XrXr</a></span>
+    <span id="code"><a href="test/test.html">Tests</a>&nbsp;&nbsp;<a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
   </footer>
   
   <!--=====================================================================-->
