Remove trailing white spaces, use large high quality icons

--- a/src/index.html
+++ b/src/index.html
@@ -5,36 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="initial-scale=1, minimum-scale=1">
   <base target="_top">
-  
+
   <title>When is Kate Live</title>
   <link rel="stylesheet" href="styles/home.css">
   <link rel="icon" type="image/png" href="assets/kateArmy.png">
-  
+
   <script src="libs/moment.js"></script>
   <script src="libs/moment-timezone.min.js"></script>
 </head>
-<!--=========================================================================-->
 <body>
   <h3>Kate will be live in:</h3>
   <h1><a></a></h1>
-  
+
   <table>
-    <thead><tr>
-      <th>Monday
-      <th>Tuesday
-      <th>Thursday
-      <th>Saturday
-    <tbody><tr>
-      <td>8 to 11 PM
-      <td>1 to 3 PM
-      <td>10 to 12 PM
-      <td>8 to 11 PM
+    <thead>
+      <tr/>
+    </thead>
+    <tbody>
+      <tr/>
+    </tbody>
   </table>
-  
+
   <p class="notice"><strong><small>All times are in PST</small></strong></p>
-  
+
   <img src="assets/overlay.jpg" class="art" alt="">
-  
+
   <nav>
     <a href="https://twitter.com/lovelykaitkim" class="twitter site">
       <img src="assets/Twitter_logo_blue.png" alt="@lovelykaitkim"><span class="name">@LovelyKaitKim</span>
@@ -46,15 +41,13 @@
       <img src="assets/YouTube-icon-full_color.png" alt="ProBoxStudio"><span class="name">ProBoxStudio</span>
     </a>
   </nav>
-  
+
   <footer>
     <span id="artist">Centered art by <a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
     <span id="author">Authored by <a href="https://github.com/XrXr">XrXr</a></span>
     <span id="code"><a href="test/test.html">Tests</a>&nbsp;&nbsp;<a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
   </footer>
-  
-  <!--=====================================================================-->
-  
+
   <script src="js/home.js"></script>
 </body>
 </html>
