Push changes to production, unify file names

--- a/test/test.html
+++ b/test/test.html
@@ -8,7 +8,7 @@
       type="image/png"
       href="../assets/kateArmy.png">
     <link rel="stylesheet" href="mocha.css">
-    <script src="../libs/moment.min.js"></script>
+    <script src="../libs/moment.js"></script>
     <script src="../libs/moment-timezone.min.js"></script>
 </head>
 <body>
@@ -31,7 +31,7 @@
   <script>mocha.setup('bdd');</script>
   <script>expect = chai.expect;</script>
   <script>var export_internals = true;</script>
-  <script src="../js/home.min.js"></script>
+  <script src="../js/home.js"></script>
   <script src="test.js"></script>
 </body>
 </html>
