Schedule reset. Deploy using new build process

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <footer>
     <span id="artist">Centered art by <a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
-    <span id="author">The first stream is <strong>24 hours long!</strong></span>
+    <span id="author">Authored by <a href="https://github.com/XrXr">XrXr</a></span>
     <span id="code"><a href="test/test.html">Tests</a>&nbsp;&nbsp;<a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
   </footer>
 
