Improve author bar look on mobile

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   </nav>
 
   <footer>
-    <span id="artist">Centered art by <a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
-    <span id="author">Authored by <a href="https://github.com/XrXr">XrXr</a></span>
+    <span id="artist"><span class="hide-on-mobile">Centered art by </span><a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
+    <span id="author"><span class="hide-on-mobile">Authored by </span><a href="https://github.com/XrXr">XrXr</a></span>
     <span id="code"><a href="test/test.html">Tests</a>&nbsp;&nbsp;<a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
   </footer>
 
