Improve looks of the link bar
- Fit everything into one line
- Center the Twtich link
- Camel case the names
- Back port changes to src

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
   <nav>
     <a href="https://twitter.com/katelovelymomo" class="twitter site">
-      <img src="assets/Twitter_logo_blue.png" alt="@katelovelymomo"><span class="name">@katelovelymomo</span>
+      <img src="assets/Twitter_logo_blue.png" alt="@KateLovelyMomo"><span class="name">@KateLovelyMomo</span>
     </a>
     <a href="http://www.twitch.tv/lovelymomo" class="twitch site">
       <img src="assets/GlitchIcon_purple.png" alt="LovelyMomo"><span class="name">LovelyMomo</span>
     </a>
     <a href="https://www.youtube.com/c/katelovelymomo" class="youtube site">
-      <img src="assets/YouTube-icon-full_color.png" alt="katelovelymomo"><span class="name">katelovelymomo</span>
+      <img src="assets/YouTube-icon-full_color.png" alt="KateLovelyMomo"><span class="name">KateLovelyMomo</span>
     </a>
   </nav>
 
