--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,14 @@
   <img src="assets/overlay.jpg" class="art" alt="">
 
   <nav>
-    <a href="https://twitter.com/lovelykaitkim" class="twitter site">
-      <img src="assets/Twitter_logo_blue.png" alt="@lovelykaitkim"><span class="name">@LovelyKaitKim</span>
+    <a href="https://twitter.com/katelovelymomo" class="twitter site">
+      <img src="assets/Twitter_logo_blue.png" alt="@KateLovelyMomo"><span class="name">@KateLovelyMomo</span>
     </a>
     <a href="http://www.twitch.tv/lovelymomo" class="twitch site">
       <img src="assets/GlitchIcon_purple.png" alt="LovelyMomo"><span class="name">LovelyMomo</span>
     </a>
-    <a href="https://www.youtube.com/user/ProBoxStudio/videos" class="youtube site">
-      <img src="assets/YouTube-icon-full_color.png" alt="ProBoxStudio"><span class="name">ProBoxStudio</span>
+    <a href="https://www.youtube.com/c/katelovelymomo" class="youtube site">
+      <img src="assets/YouTube-icon-full_color.png" alt="KateLovelyMomo"><span class="name">KateLovelyMomo</span>
     </a>
   </nav>
 
