Improve appearance on mobile. Furthur tweak link bar font size
- Place the content block in the vertical middle
- The page should now fit horizontally on phones with low horizontal
  pixels, such as iPhone 4/5

--- a/index.html
+++ b/index.html
@@ -23,40 +23,44 @@
   </script>
 </head>
 <body>
-  <h3>Kate will be live in:</h3>
-  <h1><a></a></h1>
+<div class="content-box">
+  <div class="content">
+    <h3>Kate will be live in:</h3>
+    <h1><a></a></h1>
 
-  <table>
-    <thead>
-      <tr/>
-    </thead>
-    <tbody>
-      <tr/>
-    </tbody>
-  </table>
+    <table>
+      <thead>
+        <tr/>
+      </thead>
+      <tbody>
+        <tr/>
+      </tbody>
+    </table>
 
-  <p class="notice"><strong><small>All times are in PST</small></strong></p>
+    <p class="notice"><strong><small>All times are in PST</small></strong></p>
 
-  <img src="assets/overlay.jpg" class="art" alt="">
+    <img src="assets/overlay.jpg" class="art" alt="">
 
-  <nav>
-    <a href="https://twitter.com/katelovelymomo" class="twitter site">
-      <img src="assets/Twitter_logo_blue.png" alt="@KateLovelyMomo"><span class="name">@KateLovelyMomo</span>
-    </a>
-    <a href="http://www.twitch.tv/lovelymomo" class="twitch site">
-      <img src="assets/GlitchIcon_purple.png" alt="LovelyMomo"><span class="name">LovelyMomo</span>
-    </a>
-    <a href="https://www.youtube.com/c/katelovelymomo" class="youtube site">
-      <img src="assets/YouTube-icon-full_color.png" alt="KateLovelyMomo"><span class="name">KateLovelyMomo</span>
-    </a>
-  </nav>
+    <nav>
+      <a href="https://twitter.com/katelovelymomo" class="twitter site">
+        <img src="assets/Twitter_logo_blue.png" alt="@KateLovelyMomo"><span class="name">@KateLovelyMomo</span>
+      </a>
+      <a href="http://www.twitch.tv/lovelymomo" class="twitch site">
+        <img src="assets/GlitchIcon_purple.png" alt="LovelyMomo"><span class="name">LovelyMomo</span>
+      </a>
+      <a href="https://www.youtube.com/c/katelovelymomo" class="youtube site">
+        <img src="assets/YouTube-icon-full_color.png" alt="KateLovelyMomo"><span class="name">KateLovelyMomo</span>
+      </a>
+    </nav>
 
-  <footer>
-    <span id="artist"><span class="hide-on-mobile">Centered art by </span><a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
-    <span id="author"><span class="hide-on-mobile">Authored by </span><a href="https://github.com/XrXr">XrXr</a></span>
-    <span id="code"><a href="test/test.html">Tests</a>&nbsp;&nbsp;<a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
-  </footer>
+    <footer>
+      <span id="artist"><span class="hide-on-mobile">Centered art by </span><a href="https://twitter.com/chatamonchy">@chatamonchy</a></span>
+      <span id="author"><span class="hide-on-mobile">Authored by </span><a href="https://github.com/XrXr">XrXr</a></span>
+      <span id="code"><a href="test/test.html">Tests</a>&nbsp;&nbsp;<a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
+    </footer>
 
-  <script src="js/home.js"></script>
+    <script src="js/home.js"></script>
+  </div>
+</div>
 </body>
 </html>
