Add error handling for schedule loading
- Switch to classList for adding and removing classes
- Switch to display: none for hiding

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,11 @@
 <body>
 <div class="content-box">
   <div class="content">
-    <h3>Kate will be live in:</h3>
-    <h1><a></a></h1>
+    <div class="hidden" id="countdown">
+      <h3>Kate will be live in:</h3>
+      <h1><a></a></h1>
+    </div>
+    <h1 id="loading-message">Loading schedule...</h1>
 
     <table>
       <thead>
@@ -28,7 +31,7 @@
       </tbody>
     </table>
 
-    <p class="notice"><strong><small>All times are in PST</small></strong></p>
+    <p class="notice"><strong><small></small></strong></p>
 
     <img src="assets/overlay.jpg" class="art" alt="">
 
