Get ride of TimeSlot. Add canceled property for Stream

--- a/src/test/test.html
+++ b/src/test/test.html
@@ -16,7 +16,10 @@
   <h2 style="text-align: center; font-family: helvetica">Please no failarino <img src="biblethump.png" height="30px" width="auto"></h2>
   <!-- these are only here to satisfy the script -->
   <div style="display:none;">
-    <h1><strong></strong></h1>
+    <div id="countdown">
+      <h1><strong></strong></h1>
+    </div>
+    <div id="loading-message"></div>
     <h3></h3>
     <small></small>
     <table>
