Support canceled streams. Add tests for find_next_stream()
- Canceled streams will have a line that strikes through them

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       </tbody>
     </table>
 
-    <p class="notice"><strong><small></small></strong></p>
+    <p class="notice"><strong><small>All times are converted to your local time</small></strong></p>
 
     <img src="assets/overlay.jpg" class="art" alt="">
 
