--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
 <body>
 <div class="content-box">
   <div class="content">
-    <h3>Kate will be live in:</h3>
-    <h1><a></a></h1>
+    <div class="hidden" id="countdown">
+      <h3>Kate will be live in:</h3>
+      <h1><a></a></h1>
+    </div>
+    <h1 id="loading-message">Loading schedule...</h1>
 
     <table>
       <thead>
@@ -37,7 +40,7 @@
       </tbody>
     </table>
 
-    <p class="notice"><strong><small>All times are in PST</small></strong></p>
+    <p class="notice"><strong><small>All times are converted to your local time</small></strong></p>
 
     <img src="assets/overlay.jpg" class="art" alt="">
 
@@ -63,4 +66,5 @@
   </div>
 </div>
 </body>
+
 </html>
