--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <span id="code"><a href="test/test.html">Tests</a>&nbsp;&nbsp;<a href="https://github.com/XrXr/WhenIsKateLive">Source</a></span>
     </footer>
 
-    <script src="js/home.js"></script>
+    <script src="js/main.js"></script>
   </div>
 </div>
 </body>
