--- a/src/test/test.html
+++ b/src/test/test.html
@@ -36,6 +36,6 @@
   <script>expect = chai.expect;</script>
   <script>var export_internals = true;</script>
   <script src="test.js"></script>
-  <script src="../js/home.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
