Add author and description with meta tags to the page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head profile="http://www.w3.org/2005/10/profile">
+<head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="initial-scale=1, minimum-scale=1">
+  <meta name="description" content="Find out when Kate streams in your local time zone!">
+  <meta name="author" content="XrXr">
   <base target="_top">
 
   <title>When is Kate Live</title>
@@ -22,6 +24,7 @@
     ga('send', 'pageview');
   </script>
 </head>
+
 <body>
 <div class="content-box">
   <div class="content">
