Give up and hide snippet from Google search result

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="initial-scale=1, minimum-scale=1">
   <meta name="description" content="Countdown timer and schedule information for Kate's live stream">
   <meta name="author" content="XrXr">
+  <meta name="robots" content="nosnippet">
   <base target="_top">
 
   <title>When is Kate Live</title>
