--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="initial-scale=1, minimum-scale=1">
-  <meta name="description" content="Countdown timer and schedule information for Kate's live stream">
+  <meta name="description" content="Find out when Kate streams in your local time zone!">
   <meta name="author" content="XrXr">
-  <meta name="robots" content="nosnippet">
   <base target="_top">
 
   <title>When is Kate Live</title>
