--- a/src/test/test.html
+++ b/src/test/test.html
@@ -23,9 +23,10 @@
     <h3></h3>
     <small></small>
     <table>
+      <thead>
+        <tr/>
+      </thead>
       <tbody>
-        <tr></tr>
-        <tr></tr>
       </tbody>
     </table>
   </div>
