Reword conversion note

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </tbody>
     </table>
 
-    <p class="notice"><strong><small>All times are converted to your local time</small></strong></p>
+    <p class="notice"><strong><small>All times are in your local time</small></strong></p>
 
     <img src="assets/overlay.jpg" class="art" alt="">
 
